--- a/css/fancy-robot.css
+++ b/css/fancy-robot.css
@@ -1,13 +1,43 @@
 .robot-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    height: 80vh;
+    width: 1000px;
+    background-color: #fff;
 }
 
 .robot-face-shape {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    height: 500px;
+    width: 600px;
+    background-color: #00afb2;
+    border-radius: 20px;
 }
 
 .robot-eye-left {
+    position: absolute;
+    top: 100px;
+    left: 125px;
+    height: 150px;
+    width: 100px;
+    background-color: #fff;
+    border-radius: 50%;
 }
 
 .robot-eye-right {
+    position: absolute;
+    top: 120px;
+    left: 375px;
+    height: 100px;
+    width: 100px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    transform: rotate(45deg);
 }
 
 .robot-ear-left {
@@ -17,6 +47,13 @@
 }
 
 .robot-nose {
+    position: absolute;
+    top: 250px;
+    left: 250px;
+    height: 100px;
+    width: 100px;
+    background-color: #000000;
+    border-radius: 50%;
 }
 
 .robot-teeth {
