--- a/css/fancy-robot.css
+++ b/css/fancy-robot.css
@@ -1,149 +1,150 @@
 .robot-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    height: 80vh;
-    width: 1000px;
-    position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  height: 80vh;
+  width: 1000px;
+  position: relative;
+  background-color: #ffffff;
 }
 
 .robot-face-shape {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    height: 500px;
-    width: 600px;
-    background-color: #00afb2;
-    border-radius: 20px;
-    margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  height: 500px;
+  width: 600px;
+  background-color: #00afb2;
+  border-radius: 20px;
+  border: 10px solid #000000;
+  margin: 0 auto;
 }
 
 .robot-eye-left {
-    position: absolute;
-    top: 100px;
-    left: 125px;
-    height: 150px;
-    width: 100px;
-    background-color: #fff;
-    border-radius: 50%;
+  position: absolute;
+  top: 100px;
+  left: 125px;
+  height: 150px;
+  width: 100px;
+  background-color: #fff;
+  border-radius: 50%;
 }
 
 .robot-eye-right {
-    position: absolute;
-    top: 120px;
-    left: 375px;
-    height: 100px;
-    width: 100px;
-    background-color: #ffffff;
-    border-radius: 10px;
-    transform: rotate(45deg);
+  position: absolute;
+  top: 120px;
+  left: 375px;
+  height: 100px;
+  width: 100px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  transform: rotate(45deg);
 }
 
 .robot-ear-left {
-    position: absolute;
-    top: 200px;
-    left: 90px;
-    height: 200px;
-    width: 100px;
-    background-color: #000000;
-    border-radius: 10px;
+  position: absolute;
+  top: 200px;
+  left: 90px;
+  height: 200px;
+  width: 100px;
+  background-color: #000000;
+  border-radius: 10px;
 }
 
 .robot-ear-right {
-    position: absolute;
-    top: 250px;
-    right: 40px;
-    height: 100px;
-    width: 200px;
-    background-color: #000000;
-    border-radius: 100px 100px 0 0;
-    transform: rotate(90deg);
+  position: absolute;
+  top: 250px;
+  right: 40px;
+  height: 100px;
+  width: 200px;
+  background-color: #000000;
+  border-radius: 100px 100px 0 0;
+  transform: rotate(90deg);
 }
 
 .robot-nose {
-    position: absolute;
-    top: 250px;
-    left: 250px;
-    height: 100px;
-    width: 100px;
-    background-color: #000000;
-    border-radius: 50%;
+  position: absolute;
+  top: 250px;
+  left: 250px;
+  height: 100px;
+  width: 100px;
+  background-color: #000000;
+  border-radius: 50%;
 }
 
 .robot-teeth {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 360px;
-    left: 50%;
-    transform: translateX(-50%);
-    height: 100px;
-    width: 400px;
-    background-color: #000000;
-    border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 360px;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 100px;
+  width: 400px;
+  background-color: #000000;
+  border-radius: 5px;
 }
 
-.robot-tooth:nth-child(-n+6) {
-    background-color: #fdfdfd;
-    height: 50px;
-    width: 50px;
-    border-radius: 10px;
-    transform: rotate(90deg);
-    align-self: flex-start;
+.robot-tooth:nth-child(-n + 6) {
+  background-color: #fdfdfd;
+  height: 50px;
+  width: 50px;
+  border-radius: 10px;
+  transform: rotate(90deg);
+  align-self: flex-start;
 }
-
-
 
 .robot-hair-style {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 10px;
-    width: 400px;
-    height: 100px;
-    gap: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 10px;
+  width: 400px;
+  height: 100px;
+  gap: 10px;
 }
 
 .robot-hair-one {
-    height: 60px;
-    width: 10px;
-    background-color: #000000;
-    border-radius: 10px;
-    transform: rotate(90deg);
+  height: 60px;
+  width: 10px;
+  background-color: #000000;
+  border-radius: 10px;
+  transform: rotate(90deg);
 }
 
-.robot-hair-1 {
-    height: 60px;
-    width: 10px;
-    background-color: #000000;
-    border-radius: 10px;
-    transform: rotate(90deg);
+.robot-hair-one {
+  height: 60px;
+  width: 10px;
+  background-color: #000000;
+  border-radius: 10px;
+  transform: rotate(90deg);
 }
 
+#robot-hair-two {
+  height: 80px;
+  width: 10px;
+  background-color: #000000;
+  border-radius: 10px;
+  transform: rotate(-45deg);
+}
 
 .robot-hair-two {
-    height: 80px;
-    width: 10px;
-    background-color: #000000;
-    border-radius: 10px;
-    transform: rotate(-45deg);
-}
-
-.robot-hair-2 {
-    height: 80px;
-    width: 10px;
-    background-color: #000000;
-    border-radius: 10px;
-    transform: rotate(45deg);
+  height: 80px;
+  width: 10px;
+  background-color: #000000;
+  border-radius: 10px;
+  transform: rotate(45deg);
 }
 
 .robot-hair-three {
-    height: 100px;
-    width: 10px;
-    background-color: #000000;
-    border-radius: 10px;
+  height: 100px;
+  width: 10px;
+  background-color: #000000;
+  border-radius: 10px;
 }
+
+
