--- a/css/fancy-robot.css
+++ b/css/fancy-robot.css
@@ -16,7 +16,20 @@
   position: relative;
   height: 500px;
   width: 600px;
-  background-color: #00afb2;
+  background: #aa4b6b; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #3b8d99,
+    #6b6b83,
+    #aa4b6b
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #3b8d99,
+    #6b6b83,
+    #aa4b6b
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   border-radius: 20px;
   border: 10px solid #000000;
   margin: 0 auto;
@@ -30,6 +43,7 @@
   width: 100px;
   background-color: #fff;
   border-radius: 50%;
+  opacity: 0.5;
 }
 
 .robot-eye-right {
@@ -70,8 +84,8 @@
   left: 250px;
   height: 100px;
   width: 100px;
-  background-color: #000000;
   border-radius: 50%;
+  background-image: url("https://picsum.photos/100");
 }
 
 .robot-teeth {
@@ -83,9 +97,9 @@
   left: 50%;
   transform: translateX(-50%);
   height: 100px;
-  width: 400px;
-  background-color: #000000;
+  width: 70%;
   border-radius: 5px;
+  background-color: #000000;
 }
 
 .robot-tooth:nth-child(-n + 6) {
@@ -116,14 +130,6 @@
   transform: rotate(90deg);
 }
 
-.robot-hair-one {
-  height: 60px;
-  width: 10px;
-  background-color: #000000;
-  border-radius: 10px;
-  transform: rotate(90deg);
-}
-
 #robot-hair-two {
   height: 80px;
   width: 10px;
@@ -141,10 +147,8 @@
 }
 
 .robot-hair-three {
-  height: 100px;
+  height: 6.25em;
   width: 10px;
   background-color: #000000;
   border-radius: 10px;
 }
-
-
